syntax = "proto3";
package ecommerce;
option go_package = "productinfo/service/ecommerce";

message ProductId {
    string value = 1;
}

message Product {
    string id = 1;
    string name = 2;
    float price = 3;
    string description = 4;
}

service ProductInfo {
    rpc addProduct(Product) returns (ProductId);
    rpc getProduct(ProductId) returns (Product);
}